2005-03-29  Joel Brobecker  <brobecker@gnat.com>

	* elf.c (elfcore_grok_nto_status): Print tid as long.
	(elfcore_grok_nto_regs): Likewise.

2005-03-29  Joel Brobecker  <brobecker@gnat.com>

        * irix-core.c: Remove some unnecessary prototypes.

2005-03-28  Joel Brobecker  <brobecker@adacore.com>

	* irix-core.c: Convert to ISO C.

2005-03-28  Joel Brobecker  <brobecker@adacore.com>

	* irix-core.c (do_sections): Replace + by | in expression.
	(irix_core_core_file_matches_executable_p): Add ATTRIBUTE_UNUSED
	to unused parameters to avoid a compiler warning.

2005-03-28  Mark Kettenis  <kettenis@gnu.org>

	* netbsd-core.c: Convert to ISO C.  Fix formatting.

2005-03-24  Eric Christopher  <echristo@redhat.com>

	* elfxx-mips.c: Revert previous patch.

2005-03-24  Nick Clifton  <nickc@redhat.com>

	* targets.c (_bfd_target_vector): Only include the
	bfd_elf32_ia64_hpux_big_vec vector when building a 64-bit BFD with
	all targets enabled.

2005-03-24  James E Wilson  <wilson@specifixinc.com>

	* Makefile.am (BFD32_BACKENDS): Delete elf32-ia64.lo.
	(BFD64_BACKENDS): Add elf32-ia64.lo.
	* Makefile.in: Regenerate.

2005-03-23  Eric Christopher  <echristo@redhat.com>

	* elfxx-mips.c (MIPS_ELF_READONLY_SECTION): New.
	(mips_elf_calculate_relocation): Use. Define DF_TEXTREL
	after emitting relocation.
	(_bfd_mips_elf_adjust_dynamic_symbol): Ditto.
	(_bfd_mips_elf_check_relocs): Remove code to set DF_TEXTREL
	and readonly_reloc.

2005-03-23  Mike Frysinger  <vapier@gentoo.org>
	    Nick Clifton  <nickc@redhat.com>

	* config.bfd: Accept any C library to accompany a GNU Linux
	implementation, not just the GNU C library.
	* configure.in: Likewise.
	* configure: Regenerate.

2005-03-22  H.J. Lu  <hongjiu.lu@intel.com>

	* bfd-in.h (_bfd_elf_provide_symbol): New.
	* bfd-in2.h: Regenerated.

	* elf32-ppc.c (set_linker_sym): Moved to elflink.c.
	(ppc_elf_set_sdata_syms): Call _bfd_elf_provide_symbol instead
	of set_linker_sym.
