@@ -1,3 +1,8 @@
+2005-03-29  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* elf32-arm.c (elf32_arm_check_relocs): Increment count for all
+	relocation types.  Don't count relocations which will use a PLT.
+
 2005-03-29  Joel Brobecker  <brobecker@gnat.com>
 
 	* elf.c (elfcore_grok_nto_status): Print tid as long.
